<resources>
    <string name="app_name">WMR</string>
    <string name="default_notification_channel_id">101</string>
    <string name="user_image">User image</string>
    <string name="your_messages_will_appear_here">Your Messages will appear here</string>
    <string name="welcome">Welcome</string>
    <string name="intro_text_one">WhatsDeleted will allow you to recover deleted WhatsApp messages by reading your notifications</string>
    <string name="notice">Notice</string>
    <string name="intro_text_two">If you have silenced a chat or watching it when the message gets deleted, you will not receive a notification so WhatsDeleted can\'t help in this case. \n \n WhatsDeleted can\'t recover messages that have been deleted before you installed this app.</string>
    <string name="setup">Setup</string>
    <string name="notification_notice">This allow the app to backup your notifications and messages in case they are deleted</string>
    <string name="notification_reader">Notification reader</string>
    <string name="enable">Enable</string>
    <string name="deleted_message">This message was deleted</string>
    <string name="signal_deleted_message">This message was deleted.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="premium_purchase_remove_ads">Premium purchase</string>
    <string name="share_this_app">Share this app</string>
    <string name="policies">Policies</string>
    <string name="about">About</string>
    <string name="how_to_use">How To Use</string>
    <string name="restart_service">Restart Service</string>
    <string name="whatsapp_business">WhatsApp Business</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="help">Help</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="app_updates">App updates</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_app_ads">More App (Ads)</string>
    <string name="app_services">App Services</string>
    <string name="new_text">New</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to Exit</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="description"><![CDATA[WMR is a backup app. it is designed to provide backup services for your notifications and for specific locations of your storage. WMR uses common android APIs to achieve this and it’s not designed to interfere with other apps or services on your device.\n \nHowever the use of WMR may be incompatibility with the terms of Use of other apps on your device. If this kind of incompatibility occurs, you shall not use this app. \n \nUsing WMR you accept its Terms & conditions and the Privacy Policy]]></string>
    <string name="accept">Accept</string>
    <string name="warm_dec">WMR allows you to recover deleted messages by reading your notification</string>
    <string name="hello">Hello!</string>
    <string name="amelia">Amelia</string>
    <string name="pineapple_definitely_goes_on_pizza">Pineapple definitely goes on pizza</string>
    <string name="_3_wamr_recovers_it">3. WMR recovers it</string>
    <string name="_1_receive_a_message">1. Receive a message</string>
    <string name="chat">Chat</string>
    <string name="_1_new_message_now">1. new message. now</string>
    <string name="_2_the_message_get_deleted">2. The message get deleted</string>
    <string name="if_you_silenced_a_chat_or_you_are_watching_it_when_the_message_get_deleted_you_will_not_receive_a_notification_so_wamr_cant_s_help_in_this_case">If you silenced a chat or you are watching it when the message get deleted, you will not receive a notification so WMR cant’s help in this case!</string>
    <string name="wamr_cant_s_recover_messages_that_have_been_deleted_before_you_installed_this_app">WMR cant’s recover messages that have been deleted before you installed this app!</string>
    <string name="remember">Remember!</string>
    <string name="this_allows_the_app_to_recover_your_deleted_messages_using_notification">This allows the app to recover your deleted messages Using notification.</string>
    <string name="auto_start">Auto Start</string>
    <string name="this_app_needs_auto_start_permission_in_this_version_of_device_please_grant_this_in_app_settings">This app needs auto start permission in this version of device. Please grant this in app settings.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="notifications">Notifications</string>
    <string name="before_you_exit">Before you exit</string>
    <string name="give_us_a_quick_rating_so_we_know_if_you_like_it">Give us a quick rating so we know if you like it</string>
    <string name="exit">Exit</string>
    <string name="get_access_to_all_pro">Get<font color='#00816b'> Access </font>to all Pro</string>
    <string name="unlimited_chats">Unlimited Chats</string>
    <string name="no_ads">No Ads</string>
    <string name="smooth_user_interface">Smooth User Interface</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="auto_renewable_cancel_anytime">Auto renewable, cancel anytime</string>
    <string name="unlock_all_premium_features">Unlock all premium features</string>
    <string name="_60">$60</string>
    <string name="_20_off">20 % off</string>
    <string name="yearly_subscription">Yearly Subscription</string>

</resources>