<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.AppCompat.Dialog.Alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/texViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/button_background"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCancel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCancel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/light_gray"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnYes"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintTop_toBottomOf="@+id/texViewTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>