<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_background"
            tools:context="com.awais.raza.car.wmr.ui.fragment.slider.slides.SecondSlideFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/remember"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/if_you_silenced_a_chat_or_you_are_watching_it_when_the_message_get_deleted_you_will_not_receive_a_notification_so_wamr_cant_s_help_in_this_case"
                android:textColor="@color/text_description_color3"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDescription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/wamr_cant_s_recover_messages_that_have_been_deleted_before_you_installed_this_app"
                android:textColor="@color/text_description_color3"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textViewDescription"
                app:layout_constraintStart_toStartOf="@+id/textViewDescription"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>