<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/whatsapp_business">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/allow_permissions"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewPermission"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_permissions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNotifications"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/notifications"
                android:textColor="@color/label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPermission" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNotificationDes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/this_allows_the_app_to_recover_your_deleted_messages_using_notification"
                android:textColor="#595959"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNotifications" />

            <Switch
                android:id="@+id/notificationSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewNotifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewNotifications"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAutoStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/auto_start"
                android:textColor="@color/label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNotificationDes" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAutoStartDes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/this_app_needs_auto_start_permission_in_this_version_of_device_please_grant_this_in_app_settings"
                android:textColor="#595959"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewAutoStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewAutoStart" />

            <Switch
                android:id="@+id/AutoStartSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewAutoStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewAutoStart"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>